syntax = "proto3";

package Petalaka.PetStore.Service.Services;

service PaymentManager {
  rpc CreatePremiumPlanPayment (CreatePremiumPlanPaymentRequest) returns (CreatePremiumPlanPaymentResponse);
}

message PurchasePremiumPlanPayment {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 duration = 4;
}
message PremiumPlanPayment {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  bool is_suspended = 5;
  int32 max_quantity = 6;
  int32 duration = 7;
}
message CreatePremiumPlanPaymentRequest {
  string user_id = 1;
  string user_email = 2;
  string user_phone = 3;
  repeated PurchasePremiumPlanPayment premium_plan = 4;
  double amount = 5;
  string currency = 6;
  string payment_method = 7;
}

message CreatePremiumPlanPaymentResponse {
  string payment_url = 1;
  string message = 2;
  string zalo_pay_token = 3;
  int32 code = 4;
  bool success = 5;
  string order_code = 6;
}
